CM-2.9: Добавить отправку линка вида id<int> и обновить документацию
